--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "chart.js": "^4.4.6",
     "docx-pdf": "^0.0.1",
     "dropzone": "^6.0.0-beta.2",
+    "firebase": "^12.7.0",
     "flatpickr": "^4.6.13",
     "fullcalendar": "^6.1.15",
     "jsvectormap": "^1.6.0",
